<resources>
    <string name="app_name">OpenGlove</string>

    <string name="device_name">Device name:</string>
    <string name="device_name_openglove">OpenGloveIZQ</string>
    <string name="protocol_command">Command:</string>

    <!-- commands -->
    <string name="initialize_motor">1,1,11s</string>
    <string name="activate_motor">2,1,255s</string>

    <string name="devices_list">Devices list</string>
    <string name="list_item">List item</string>

    <!-- buttons -->
    <string name="button_connect">Connect</string>
    <string name="button_send">Send</string>

    <string name="button_ON">On</string>
    <string name="button_OFF">Off</string>

    <string name="button_motor_ON">Motor On</string>
    <string name="button_motor_OFF">Motor Off</string>

    <string name="button_set_threshold">Set Threshold</string>

    <string name="flexor_value">Flexor value: </string>
    <string name="flexors_threshold">Threshold: </string>
    <string name="zero">0</string>

</resources>
